// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notification component renders correctly for every type 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        100 tokens 
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
         were accepted.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 2`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        100/100 views 
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
         have been met.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 3`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        someUser gifted you 100 views 
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 4`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          @
          someUser
        </Text>
         
        accepted your bid of
         
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          0
           
          Tokens
        </Text>
         
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 5`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        onPress={[Function]}
      >
        <Text
          onPress={[Function]}
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          @
          someUser
        </Text>
         
        declined your bid of
         
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          0
           
          Tokens
        </Text>
         
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
         
        You have not been charged
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 6`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        <Text
          onPress={[Function]}
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          @
          someUser
        </Text>
         
        is offering
         
        <Text
          style={
            Object {
              "fontWeight": "bold",
            }
          }
        >
          0
           
          Tokens
           
          <Text>
            for
             
            <Text
              style={
                Object {
                  "fontWeight": "600",
                }
              }
            >
              some title
            </Text>
          </Text>
        </Text>
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 7`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        onPress={[Function]}
      >
        Your boost 
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
         was rejected for . Your points have been credited back to your wallet.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 8`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <Text
      onPress={[Function]}
    >
      You revoked your boost
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 9`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        100 points 
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
         is awaiting approval by
         
        <Text
          onPress={[Function]}
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          someChannel
        </Text>
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 10`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        100 views 
        <Text>
          for
           
          <Text
            style={
              Object {
                "fontWeight": "600",
              }
            }
          >
            some title
          </Text>
        </Text>
         is awaiting approval
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 11`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text>
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        someUser
      </Text>
      <Text>
         
        commented on
         
      </Text>
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        some owner's activity
      </Text>
    </Text>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 12`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        some message
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 13`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          someUser
        </Text>
         
        down voted
         
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          some title
        </Text>
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 14`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          some title
        </Text>
         
        was featured
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 15`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        someUser subscribed to you
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 16`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          someUser
        </Text>
        <Text>
           
          posted in
           
        </Text>
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          someGroup
        </Text>
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 17`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        [missing {{user}} value] invited you to join someGroup
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 18`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        You were kicked off from someGroup
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 19`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          someUser
        </Text>
         
        voted up
         
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          some title
        </Text>
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 20`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          someUser
        </Text>
         
        tried to call you.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 21`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        someUser reminded some title
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 22`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        someUser
         
        tagged you in a post
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 23`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        You can gain more reach by boosting your content. Hit the blue boost icon on your posts.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 24`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        Chat securely with your mutual subscriptions.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 25`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        Tap here to discover new channels and media.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 26`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        Welcome to Minds. We have given you
         
        <Text
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          100 points
        </Text>
         to get you started.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 27`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "600",
          }
        }
      >
        Tap here to create a post.
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;

exports[`notification component renders correctly for every type 28`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "paddingBottom": 16,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 16,
      },
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Image
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "https://cdn.minds.com/icon/undefined/medium",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        undefined,
        undefined,
      ]
    }
  />
  <View
    onPress={[Function]}
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
    >
      <Text>
        You have received a wire of 1000 from
         
        <Text
          onPress={[Function]}
          style={
            Object {
              "fontWeight": "600",
            }
          }
        >
          @
          fromUser
        </Text>
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "fontSize": 11,
          },
          undefined,
        ]
      }
    >
      Invalid date
    </Text>
  </View>
</View>
`;
